# whisper-term

./: .gitignore  Makefile  README.md  pyproject.toml
audiocapture/: Package.swift
audiocapture/Sources/audiocapture/: AudioCapture.swift  main.swift
emacs/: whisper-term.el
parakeet-server/: CMakeLists.txt  main.cpp
patches/: parakeet-blank-id-v2.patch
scripts/: setup.sh
src/whisper_term/: __main__.py  cli.py  formatter.py
