[project]
name = "whisper-term"
version = "0.1.0"
description = "Terminal-based real-time audio transcription using Parakeet/Whisper on macOS"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "sounddevice>=0.5",
]

[project.scripts]
whisper-term = "whisper_term.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
